--- a/pom.xml
+++ b/pom.xml
@@ -4,16 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>jingwei-parent</artifactId>
+        <artifactId>parent</artifactId>
         <groupId>io.jingwei</groupId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../jingwei-parent/pom.xml</relativePath>
+        <relativePath>../parent/pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.jingwei</groupId>
-    <artifactId>jingwei-gateway</artifactId>
+    <artifactId>api-gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
